coilcl/src/Parser.cpp
// Copyright (c) 2017 Quenza Inc. All rights reserved.
//
// This file is part of the Cryptox project.
//
// Use of this source code is governed by a private license
// that can be found in the LICENSE file. Content can not be 
// copied and/or distributed without the express of the author.

#include "Parser.h"

#include <iostream>
#include <exception>
#include <sstream>

#define CURRENT_DATA() m_comm.Current().FetchData()
#define PREVIOUS_TOKEN() m_comm.Previous().FetchToken()
#define CURRENT_TOKEN() m_comm.Current().FetchToken()
#define MATCH_TOKEN(t) (CURRENT_TOKEN() == t)
#define NOT_TOKEN(t) (CURRENT_TOKEN() != t)

#define AST_ROOT() m_ast

//TODO: remove EMIT helpers
#define EMIT_IDENTIFIER() std::cout << "EMIT::IDENTIFIER" << "("<< CURRENT_DATA()->As<std::string>() << ")" << std::endl;

#define MAKE_RESV_REF() std::make_shared<DeclRefExpr>(m_identifierStack.top()); m_identifierStack.pop();
#define MAKE_BUILTIN_FUNC(n) std::make_shared<BuiltinExpr>(std::make_shared<DeclRefExpr>(n));

class UnexpectedTokenException : public std::exception
{
public:
	UnexpectedTokenException() noexcept
	{
	}

	explicit UnexpectedTokenException(char const* const message, int line, int column, Token token) noexcept
		: m_line{ line }
		, m_column{ column }
	{
		std::stringstream ss;
		ss << "Semantic error: " << message;
		ss << " before " << "'" + Keyword{ token }.Print() + "'" << " token at ";
		ss << line << ':' << column;
		_msg = ss.str();
	}

	virtual int Line() const noexcept
	{
		return m_line;
	}

	virtual int Column() const noexcept
	{
		return m_column;
	}

	virtual const char *what() const noexcept
	{
		return _msg.c_str();
	}

protected:
	std::string _msg;

private:
	int m_line;
	int m_column;
};

class SyntaxException : public std::exception
{
public:
	SyntaxException() noexcept
	{
	}

	explicit SyntaxException(char const* const message, char token, int line, int column) noexcept
		: m_token{ token }
		, m_line{ line }
		, m_column{ column }
	{
		std::stringstream ss;
		ss << "Syntax error: " << message << " at ";
		ss << line << ':' << column;
		_msg = ss.str();
	}

	virtual int Line() const noexcept
	{
		return m_line;
	}

	virtual int Column() const noexcept
	{
		return m_column;
	}

	virtual const char *what() const noexcept
	{
		return _msg.c_str();
	}

protected:
	std::string _msg;

private:
	char m_token;
	int m_line;
	int m_column;
};

class ParseException : public std::exception
{
public:
	ParseException() noexcept = default;

	explicit ParseException(char const* const message, int line, int column) noexcept
		: m_line{ line }
		, m_column{ column }
	{
		std::stringstream ss;
		ss << "Parser error: " << message;
		ss << " " << line << ':' << column;
		_msg = ss.str();
	}

	virtual int Line() const noexcept
	{
		return m_line;
	}

	virtual int Column() const noexcept
	{
		return m_column;
	}

	virtual const char *what() const noexcept
	{
		return _msg.c_str();
	}

protected:
	std::string _msg;

private:
	int m_line;
	int m_column;
};

Parser::Parser(std::shared_ptr<Compiler::Profile>& profile)
	: Stage{ this }
	, m_profile{ profile }
	, lex{ profile }
{
	lex.ErrorHandler([](const std::string& err, char token, int line, int column)
	{
		throw SyntaxException(err.c_str(), token, line, column);
	});
}

Parser& Parser::CheckCompatibility()
{
	//TODO: check profile options here
	return (*this);
}

void Parser::Error(const char* err, Token token)
{
	throw UnexpectedTokenException{ err, m_comm.Current().FetchLine(), m_comm.Current().FetchColumn(), token };
}

// Expect next token to be provided token, if so
// move lexer forward. If not report error and bail.
void Parser::ExpectToken(Token token)
{
	if (NOT_TOKEN(token)) {
		Error("expected expression", token);
	}

	NextToken();
}

//TODO: remove ?
void Parser::ExpectIdentifier()
{
	if (NOT_TOKEN(TK_IDENTIFIER)) {
		Error("expected identifier", TK_IDENTIFIER);
	}

	assert(m_comm.Current().HasData());

	NextToken();
}

// Storage class specifiers determine the lifetime and scope of the object
auto Parser::StorageClassSpecifier()
{
	using namespace Typedef;

	switch (CURRENT_TOKEN()) {
	case TK_EXTERN:
		return TypedefBase::StorageClassSpecifier::EXTERN;
	case TK_REGISTER:
		return TypedefBase::StorageClassSpecifier::REGISTER;
	case TK_STATIC:
		return TypedefBase::StorageClassSpecifier::STATIC;
	case TK_AUTO:
		return TypedefBase::StorageClassSpecifier::AUTO;
	case TK_TYPEDEF:
		return TypedefBase::StorageClassSpecifier::TYPEDEF;
	}

	return TypedefBase::StorageClassSpecifier::NONE;
}

// Type specifiers determine size of the object in memory
bool Parser::TypeSpecifier()
{
	using namespace Typedef;

	switch (CURRENT_TOKEN()) {
	case TK_VOID:
		m_typeStack.push(Util::MakeBuiltinType(BuiltinType::Specifier::VOID));
		return true;
	case TK_CHAR:
		m_typeStack.push(Util::MakeBuiltinType(BuiltinType::Specifier::CHAR));
		return true;
	case TK_SHORT:
		m_typeStack.push(Util::MakeBuiltinType(BuiltinType::Specifier::SHORT));
		return true;
	case TK_INT:
		m_typeStack.push(Util::MakeBuiltinType(BuiltinType::Specifier::INT));
		return true;
	case TK_LONG:
		m_typeStack.push(Util::MakeBuiltinType(BuiltinType::Specifier::LONG));
		return true;
	case TK_FLOAT:
		m_typeStack.push(Util::MakeBuiltinType(BuiltinType::Specifier::FLOAT));
		return true;
	case TK_DOUBLE:
		m_typeStack.push(Util::MakeBuiltinType(BuiltinType::Specifier::DOUBLE));
		return true;
	case TK_SIGNED:
		m_typeStack.push(Util::MakeBuiltinType(BuiltinType::Specifier::INT));
		return true;
	case TK_UNSIGNED:
		m_typeStack.push(Util::MakeBuiltinType(BuiltinType::Specifier::INT));
		return true;
	case TK_BOOL:
		m_typeStack.push(Util::MakeBuiltinType(BuiltinType::Specifier::BOOL));
		return true;
	case TK_COMPLEX:
		return true;
	case TK_IMAGINARY:
		return true;
	}

	// Check for enum declarations
	if (EnumSpecifier()) {
		return true;
	}

	// Check for struct or union declarations
	if (StructOrUnionSpecifier()) {
		return true;
	}

	// Check if identifier is registered as typename
	if (TypenameSpecifier()) {
		return true;
	}

	return false;
}

// Specifying type correctness
auto Parser::TypeQualifier()
{
	using namespace Typedef;

	switch (CURRENT_TOKEN()) {
	case TK_CONST:
		return TypedefBase::TypeQualifier::CONST;
	case TK_VOLATILE:
		return TypedefBase::TypeQualifier::VOLATILE;
	}

	return TypedefBase::TypeQualifier::NONE;
}

template<typename _Ty, typename _Decay = int>
auto IsSet(_Ty v) -> bool
{
	return static_cast<bool>(static_cast<_Decay>(v));
}

bool Parser::DeclarationSpecifiers()
{
	using namespace Typedef;

	TypedefBase::StorageClassSpecifier tmpSCP = TypedefBase::StorageClassSpecifier::NONE;
	std::vector<TypedefBase::TypeQualifier> tmpTQ;
	auto typeCount = m_typeStack.size();
	auto isInline = false;

	bool cont = true;
	while (cont) {
		cont = false;

		// Find a type specifier
		if (typeCount == m_typeStack.size() && TypeSpecifier()) {
			NextToken();
			cont = true;
		}

		// Only one specifier can be applied per object type
		auto sc = StorageClassSpecifier();
		if (IsSet(sc)) {
			NextToken();
			tmpSCP = sc;
			cont = true;
		}

		// Can have multiple type qualifiers, list them
		auto tq = TypeQualifier();
		if (IsSet(tq)) {
			NextToken();
			tmpTQ.push_back(tq);
			cont = true;
		}

		// Function inline specifier
		if (MATCH_TOKEN(TK_INLINE)) {
			NextToken();
			isInline = true;
			cont = true;
		}
	}

	// No type was found
	if (m_typeStack.empty()) {
		return false;
	}

	// Append all stacked storage classes and qualifiers onto the value object
	auto baseType = m_typeStack.top();
	if (tmpSCP != TypedefBase::StorageClassSpecifier::NONE) {
		baseType->SetStorageClass(tmpSCP);
	}
	for (const auto& tq : tmpTQ) {
		baseType->SetQualifier(tq);
	}

	//TODO: function inliner
	/*if (isInline) {
		baseType->SetInline();
	}*/

	return true;
}

bool Parser::TypenameSpecifier()
{
	if (MATCH_TOKEN(TK_IDENTIFIER)) {
		auto name = CURRENT_DATA()->As<std::string>();

		auto res = m_typedefList[name];
		if (res == nullptr) {
			return false;
		}

		m_typeStack.push(Util::MakeTypedefType(name, res));
		return true;
	}

	return false;
}

bool Parser::StructOrUnionSpecifier()
{
	auto isUnion = false;

	switch (CURRENT_TOKEN()) {
	case TK_STRUCT:
		NextToken();
		break;
	case TK_UNION:
		NextToken();
		isUnion = true;
		break;
	default:
		return false;
	}

	std::string name;
	if (MATCH_TOKEN(TK_IDENTIFIER)) {
		EMIT_IDENTIFIER();
		name = CURRENT_DATA()->As<std::string>();
		NextToken();
	}

	if (MATCH_TOKEN(TK_BRACE_OPEN)) {
		using RecType = RecordDecl::RecordType;

		NextToken();
		auto rec = std::make_shared<RecordDecl>(isUnion ? RecType::UNION : RecType::STRUCT);

		if (!name.empty()) {
			rec->SetName(name);
			m_recordList[std::make_pair(name, !static_cast<int>(isUnion))] = rec;
		}

		do {
			SpecifierQualifierList();

			for (;;) {
				Declarator();

				auto decl = m_identifierStack.top();
				m_identifierStack.pop();
				auto field = std::make_shared<FieldDecl>(decl, m_typeStack.top());

				if (MATCH_TOKEN(TK_COLON)) {
					NextToken();
					ConstantExpression();
					field->SetBitField(std::dynamic_pointer_cast<IntegerLiteral>(m_elementDescentPipe.next()));
					m_elementDescentPipe.pop();
				}

				m_typeStack.pop();

				rec->AddField(field);

				if (NOT_TOKEN(TK_COMMA)) {
					break;
				}

				NextToken();
			}

			ExpectToken(TK_COMMIT);
		} while (NOT_TOKEN(TK_BRACE_CLOSE));
		ExpectToken(TK_BRACE_CLOSE);

		m_elementDescentPipe.push(rec);
		m_elementDescentPipe.lock();
	}
	else {
		using Specifier = Typedef::RecordType::Specifier;

		auto res = m_recordList[std::make_pair(name, !static_cast<int>(isUnion))];
		if (res == nullptr) {
			return false;
		}

		m_typeStack.push(Util::MakeRecordType(name, isUnion ? Specifier::UNION : Specifier::STRUCT));
		m_comm.ShiftBackward();
	}

	return true;
}

void Parser::SpecifierQualifierList()
{
	std::vector<CoilCl::Typedef::TypedefBase::TypeQualifier> tmpTQ;
	auto typeCount = m_typeStack.size();

	bool cont = false;
	do {
		cont = false;

		// Find a type specifier
		if (typeCount == m_typeStack.size() && TypeSpecifier()) {
			NextToken();
			cont = true;
		}

		// Can have multiple type qualifiers, list them
		auto tq = TypeQualifier();
		if (tq != Typedef::TypedefBase::TypeQualifier::NONE) {
			NextToken();
			tmpTQ.push_back(tq);
			cont = true;
		}
	} while (cont);

	// Append all stacked storage classes and qualifiers onto the value object
	auto baseType = m_typeStack.top();
	for (const auto& tq : tmpTQ) {
		baseType->SetQualifier(tq);
	}
}

bool Parser::EnumSpecifier()
{
	if (MATCH_TOKEN(TK_ENUM)) {
		NextToken();

		auto enm = std::make_shared<EnumDecl>();

		if (MATCH_TOKEN(TK_IDENTIFIER)) {
			EMIT_IDENTIFIER();
			enm->SetName(CURRENT_DATA()->As<std::string>());
			NextToken();
		}

		if (MATCH_TOKEN(TK_BRACE_OPEN)) {
			for (;;) {
				NextToken();

				if (MATCH_TOKEN(TK_IDENTIFIER)) {
					EMIT_IDENTIFIER();

					auto enmConst = std::make_shared<EnumConstantDecl>(CURRENT_DATA()->As<std::string>());

					NextToken();
					if (MATCH_TOKEN(TK_ASSIGN)) {
						NextToken();
						ConstantExpression();
						enmConst->SetAssignment(m_elementDescentPipe.next());
						m_elementDescentPipe.pop();
					}

					enm->AddConstant(enmConst);
				}

				if (NOT_TOKEN(TK_COMMA)) {
					break;
				}
			}
			ExpectToken(TK_BRACE_CLOSE);
		}

		m_elementDescentPipe.push(enm);
		m_elementDescentPipe.lock();
		return true;
	}

	return false;
}

bool Parser::UnaryOperator()
{
	switch (CURRENT_TOKEN()) {
	case TK_AMPERSAND:
	{
		NextToken();
		CastExpression();

		auto resv = m_elementDescentPipe.next();
		m_elementDescentPipe.pop();
		auto unaryOp = std::make_shared<CoilCl::AST::UnaryOperator>(CoilCl::AST::UnaryOperator::UnaryOperator::ADDR, CoilCl::AST::UnaryOperator::OperandSide::PREFIX, resv);
		m_elementDescentPipe.push(unaryOp);
		break;
	}
	case TK_ASTERISK:
	{
		NextToken();
		CastExpression();

		auto resv = m_elementDescentPipe.next();
		m_elementDescentPipe.pop();
		auto unaryOp = std::make_shared<CoilCl::AST::UnaryOperator>(CoilCl::AST::UnaryOperator::UnaryOperator::PTRVAL, CoilCl::AST::UnaryOperator::OperandSide::PREFIX, resv);
		m_elementDescentPipe.push(unaryOp);
		break;
	}
	case TK_PLUS:
	{
		NextToken();
		CastExpression();

		auto resv = m_elementDescentPipe.next();
		m_elementDescentPipe.pop();
		auto unaryOp = std::make_shared<CoilCl::AST::UnaryOperator>(CoilCl::AST::UnaryOperator::UnaryOperator::INTPOS, CoilCl::AST::UnaryOperator::OperandSide::PREFIX, resv);
		m_elementDescentPipe.push(unaryOp);
		break;
	}
	case TK_MINUS:
	{
		NextToken();
		CastExpression();

		auto resv = m_elementDescentPipe.next();
		m_elementDescentPipe.pop();
		auto unaryOp = std::make_shared<CoilCl::AST::UnaryOperator>(CoilCl::AST::UnaryOperator::UnaryOperator::INTNEG, CoilCl::AST::UnaryOperator::OperandSide::PREFIX, resv);
		m_elementDescentPipe.push(unaryOp);
		break;
	}
	case TK_TILDE:
	{
		NextToken();
		CastExpression();

		auto resv = m_elementDescentPipe.next();
		m_elementDescentPipe.pop();
		auto unaryOp = std::make_shared<CoilCl::AST::UnaryOperator>(CoilCl::AST::UnaryOperator::UnaryOperator::BITNOT, CoilCl::AST::UnaryOperator::OperandSide::PREFIX, resv);
		m_elementDescentPipe.push(unaryOp);
		break;
	}
	case TK_NOT:
	{
		NextToken();
		CastExpression();

		auto resv = m_elementDescentPipe.next();
		m_elementDescentPipe.pop();
		auto unaryOp = std::make_shared<CoilCl::AST::UnaryOperator>(CoilCl::AST::UnaryOperator::UnaryOperator::BOOLNOT, CoilCl::AST::UnaryOperator::OperandSide::PREFIX, resv);
		m_elementDescentPipe.push(unaryOp);
		break;
	}
	default:
		return false;
	}

	return true;
}

bool Parser::AssignmentOperator()
{
	switch (CURRENT_TOKEN()) {
	case TK_ASSIGN:
	{
		auto binOp = std::make_shared<BinaryOperator>(BinaryOperator::BinOperand::ASSGN, m_elementDescentPipe.next());
		m_elementDescentPipe.pop();

		NextToken();
		AssignmentExpression();

		binOp->SetRightSide(m_elementDescentPipe.next());
		m_elementDescentPipe.pop();
		m_elementDescentPipe.push(binOp);
		break;
	}
	case TK_MUL_ASSIGN:
	{
		auto resv = std::dynamic_pointer_cast<DeclRefExpr>(m_elementDescentPipe.next());
		auto comOp = std::make_shared<CompoundAssignOperator>(CompoundAssignOperator::CompoundAssignOperand::MUL, resv);
		m_elementDescentPipe.pop();

		NextToken();
		AssignmentExpression();

		comOp->SetRightSide(m_elementDescentPipe.next());
		m_elementDescentPipe.pop();
		m_elementDescentPipe.push(comOp);
		break;
	}
	case TK_DIV_ASSIGN:
	{
		auto resv = std::dynamic_pointer_cast<DeclRefExpr>(m_elementDescentPipe.next());
		auto comOp = std::make_shared<CompoundAssignOperator>(CompoundAssignOperator::CompoundAssignOperand::DIV, resv);
		m_elementDescentPipe.pop();

		NextToken();
		AssignmentExpression();

		comOp->SetRightSide(m_elementDescentPipe.next());
		m_elementDescentPipe.pop();
		m_elementDescentPipe.push(comOp);
		break;
	}
	case TK_MOD_ASSIGN:
	{
		auto resv = std::dynamic_pointer_cast<DeclRefExpr>(m_elementDescentPipe.next());
		auto comOp = std::make_shared<CompoundAssignOperator>(CompoundAssignOperator::CompoundAssignOperand::MOD, resv);
		m_elementDescentPipe.pop();

		NextToken();
		AssignmentExpression();

		comOp->SetRightSide(m_elementDescentPipe.next());
		m_elementDescentPipe.pop();
		m_elementDescentPipe.push(comOp);
		break;
	}
	case TK_ADD_ASSIGN:
	{
		auto resv = std::dynamic_pointer_cast<DeclRefExpr>(m_elementDescentPipe.next());
		auto comOp = std::make_shared<CompoundAssignOperator>(CompoundAssignOperator::CompoundAssignOperand::ADD, resv);
		m_elementDescentPipe.pop();

		NextToken();
		AssignmentExpression();

		comOp->SetRightSide(m_elementDescentPipe.next());
		m_elementDescentPipe.pop();
		m_elementDescentPipe.push(comOp);
		break;
	}
	case TK_SUB_ASSIGN:
	{
		auto resv = std::dynamic_pointer_cast<DeclRefExpr>(m_elementDescentPipe.next());
		auto comOp = std::make_shared<CompoundAssignOperator>(CompoundAssignOperator::CompoundAssignOperand::SUB, resv);
		m_elementDescentPipe.pop();

		NextToken();
		AssignmentExpression();

		comOp->SetRightSide(m_elementDescentPipe.next());
		m_elementDescentPipe.pop();
		m_elementDescentPipe.push(comOp);
		break;
	}
	case TK_LEFT_ASSIGN:
	{
		auto resv = std::dynamic_pointer_cast<DeclRefExpr>(m_elementDescentPipe.next());
		auto comOp = std::make_shared<CompoundAssignOperator>(CompoundAssignOperator::CompoundAssignOperand::LEFT, resv);
		m_elementDescentPipe.pop();

		m_elementDescentPipe.pop();
		NextToken();
		AssignmentExpression();

		comOp->SetRightSide(m_elementDescentPipe.next());
		m_elementDescentPipe.pop();
		m_elementDescentPipe.push(comOp);
		break;
	}
	case TK_RIGHT_ASSIGN:
	{
		auto resv = std::dynamic_pointer_cast<DeclRefExpr>(m_elementDescentPipe.next());
		auto comOp = std::make_shared<CompoundAssignOperator>(CompoundAssignOperator::CompoundAssignOperand::RIGHT, resv);
		m_elementDescentPipe.pop();

		NextToken();
		AssignmentExpression();

		comOp->SetRightSide(m_elementDescentPipe.next());
		m_elementDescentPipe.pop();
		m_elementDescentPipe.push(comOp);
		break;
	}
	case TK_AND_ASSIGN:
	{
		auto resv = std::dynamic_pointer_cast<DeclRefExpr>(m_elementDescentPipe.next());
		auto comOp = std::make_shared<CompoundAssignOperator>(CompoundAssignOperator::CompoundAssignOperand::AND, resv);
		m_elementDescentPipe.pop();

		NextToken();
		AssignmentExpression();

		comOp->SetRightSide(m_elementDescentPipe.next());
		m_elementDescentPipe.pop();
		m_elementDescentPipe.push(comOp);
		break;
	}
	case TK_XOR_ASSIGN:
	{
		auto resv = std::dynamic_pointer_cast<DeclRefExpr>(m_elementDescentPipe.next());
		auto comOp = std::make_shared<CompoundAssignOperator>(CompoundAssignOperator::CompoundAssignOperand::XOR, resv);
		m_elementDescentPipe.pop();

		NextToken();
		AssignmentExpression();

		comOp->SetRightSide(m_elementDescentPipe.next());
		m_elementDescentPipe.pop();
		m_elementDescentPipe.push(comOp);
		break;
	}
	case TK_OR_ASSIGN:
	{
		auto resv = std::dynamic_pointer_cast<DeclRefExpr>(m_elementDescentPipe.next());
		auto comOp = std::make_shared<CompoundAssignOperator>(CompoundAssignOperator::CompoundAssignOperand::OR, resv);
		m_elementDescentPipe.pop();

		NextToken();
		AssignmentExpression();

		comOp->SetRightSide(m_elementDescentPipe.next());
		m_elementDescentPipe.pop();
		m_elementDescentPipe.push(comOp);
		break;
	}
	default:
		return false;
	}

	return true;
}

void Parser::PrimaryExpression()
{
	using Typedef::BuiltinType;

	switch (CURRENT_TOKEN()) {
	case TK_IDENTIFIER:
		EMIT_IDENTIFIER();
		m_identifierStack.push(CURRENT_DATA()->As<std::string>());
		NextToken();
		break;

	case TK_CONSTANT:
		switch (CURRENT_DATA()->DataType<BuiltinType>()->TypeSpecifier()) {
		case BuiltinType::Specifier::INT:
		{
			auto object = std::dynamic_pointer_cast<ValueObject<int>>(CURRENT_DATA());
			m_elementDescentPipe.push(std::make_shared<IntegerLiteral>(std::move(object)));
			break;
		}
		case BuiltinType::Specifier::DOUBLE:
		{
			auto object = std::dynamic_pointer_cast<ValueObject<double>>(CURRENT_DATA());
			m_elementDescentPipe.push(std::make_shared<FloatingLiteral>(std::move(object)));
			break;
		}
		case BuiltinType::Specifier::CHAR:
		{
			if (CURRENT_DATA()->IsArray()) {
				auto object = std::dynamic_pointer_cast<ValueObject<std::string>>(CURRENT_DATA());
				m_elementDescentPipe.push(std::make_shared<StringLiteral>(std::move(object)));
			}
			else {
				auto object = std::dynamic_pointer_cast<ValueObject<char>>(CURRENT_DATA());
				m_elementDescentPipe.push(std::make_shared<CharacterLiteral>(std::move(object)));
			}
			break;
		}
		}
		NextToken();
		break;

	case TK_PARENTHESE_OPEN:
		NextToken();
		Expression();

		auto parenthesis = std::make_shared<ParenExpr>(m_elementDescentPipe.next());
		m_elementDescentPipe.pop();
		m_elementDescentPipe.push(parenthesis);
		ExpectToken(TK_PARENTHESE_CLOSE);
	}
}

void Parser::ArgumentExpressionList()
{
	for (;;) {
		auto itemState = m_elementDescentPipe.state();
		AssignmentExpression();
		if (m_elementDescentPipe.is_changed(itemState)) {
			m_elementDescentPipe.lock();
		}

		if (NOT_TOKEN(TK_COMMA)) {
			break;
		}

		NextToken();
	}
}

void Parser::PostfixExpression()
{
	if (MATCH_TOKEN(TK_PARENTHESE_OPEN)) {
		// Snapshot current state in case of rollback
		m_comm.Snapshot();
		try {
			NextToken();
			TypeName();
			ExpectToken(TK_PARENTHESE_CLOSE);
			ExpectToken(TK_BRACE_OPEN);

			// Remove snapshot since we can continue this path
			m_comm.DisposeSnapshot();

			auto list = std::make_shared<InitListExpr>();

			for (;;) {
				Initializer();

				list->AddListItem(m_elementDescentPipe.next());
				m_elementDescentPipe.pop();

				if (NOT_TOKEN(TK_COMMA)) {
					break;
				}

				NextToken();
			}
			ExpectToken(TK_BRACE_CLOSE);

			m_elementDescentPipe.push(std::make_shared<CompoundLiteralExpr>(list));
		}

		// Cannot cast, rollback the command state
		catch (const UnexpectedTokenException&) {
			m_comm.Revert();
		}
	}

	auto startSz = m_identifierStack.size();

	PrimaryExpression();

	switch (CURRENT_TOKEN()) {
	case TK_BRACKET_OPEN:
	{
		NextToken();

		auto resv = MAKE_RESV_REF();

		Expression();
		ExpectToken(TK_BRACKET_CLOSE);
